# OxylusEngine

./: .clang-format  .gitignore  .luarc.json  CMakeLists.txt  README.md  shell.nix  xmake.lua
Oxylus/: CMakeLists.txt  xmake.lua
Oxylus/include/: Oxylus.hpp
Oxylus/include/Asset/: AssetFile.hpp  AssetManager.hpp  AudioSource.hpp  EmbedAsset.hpp  Mesh.hpp  ParserGLTF.hpp  Texture.hpp  TilemapSerializer.hpp
Oxylus/include/Audio/: AudioEngine.hpp
Oxylus/include/Core/: App.hpp  ApplicationEvents.hpp  Arc.hpp  ESystem.hpp  Enum.hpp  FileSystem.hpp  Handle.hpp  Input.hpp  JobManager.hpp  Keycodes.hpp  LayerStack.hpp  Option.hpp  Project.hpp  ProjectSerializer.hpp  Types.hpp  UUID.hpp  VFS.hpp
Oxylus/include/Memory/: SlotMap.hpp  Stack.hpp
Oxylus/include/Modules/: Linker.hpp  ModuleInterface.hpp  ModuleUtil.hpp
Oxylus/include/OS/: OS.hpp
Oxylus/include/Physics/: Physics.hpp  PhysicsInterfaces.hpp  PhysicsMaterial.hpp  RayCast.hpp
Oxylus/include/Render/: BoundingVolume.hpp  Camera.hpp  EasyRenderPipeline.hpp  Frustum.hpp  RenderPipeline.hpp  Renderer.hpp  RendererCommon.hpp  RendererConfig.hpp  RendererInstance.hpp  SceneRendererEvents.hpp  Window.hpp
Oxylus/include/Render/Utils/: RectPacker.hpp  VukCommon.hpp
Oxylus/include/Render/Vulkan/: VkContext.hpp
Oxylus/include/Scene/: Components.hpp  Scene.hpp  SceneEvents.hpp  SceneGPU.hpp
Oxylus/include/Scene/ECSModule/: ComponentWrapper.hpp  Core.hpp  (+1 more)
Oxylus/include/Scripting/: LuaApplicationBindings.hpp  LuaAssetManagerBindings.hpp  LuaAudioBindings.hpp  LuaBinding.hpp  LuaDebugBindings.hpp  LuaFlecsBindings.hpp  LuaImGuiBindings.hpp  LuaInputBindings.hpp  LuaManager.hpp  LuaMathBindings.hpp  LuaPhysicsBindings.hpp  LuaRendererBindings.hpp  LuaSceneBindings.hpp  LuaSystem.hpp  LuaUIBindings.hpp  LuaVFSBindings.hpp
Oxylus/include/Thread/: TaskScheduler.hpp  Thread.hpp  ThreadManager.hpp
Oxylus/include/UI/: ImGuiLayer.hpp  RuntimeConsole.hpp  SceneHierarchyViewer.hpp
Oxylus/include/Utils/: Archive.hpp  CVars.hpp  ColorUtils.hpp  FileWatch.hpp  JsonWriter.hpp  Log.hpp  OxMath.hpp  StringUtils.hpp  Timer.hpp  Timestep.hpp  Toml.hpp
Oxylus/src/: pch.cpp  pch.hpp
Oxylus/src/Asset/: Asset.hpp  AssetFile.hpp  AssetManager.cpp  AssetManager.hpp  AudioSource.cpp  AudioSource.hpp  EmbedAsset.cpp  EmbedAsset.hpp  Material.cpp  Material.hpp  Mesh.hpp  PBRMaterial.hpp  ParserGLTF.cpp  ParserGLTF.hpp  SpriteMaterial.cpp  SpriteMaterial.hpp  Texture.cpp  Texture.hpp  TilemapSerializer.cpp  TilemapSerializer.hpp
Oxylus/src/Assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  EmbedAsset.cpp  Material.cpp  Material.hpp  PBRMaterial.cpp  PBRMaterial.hpp  SpriteMaterial.cpp  SpriteMaterial.hpp  Texture.cpp  Texture.hpp  TilemapSerializer.cpp  TilemapSerializer.hpp
Oxylus/src/Audio/: AudioEngine.cpp  AudioEngine.hpp  AudioListener.cpp  AudioListener.hpp  AudioSource.cpp  AudioSource.hpp
Oxylus/src/Core/: App.cpp  App.hpp  ApplicationEvents.hpp  Base.hpp  Buffer.hpp  ESystem.hpp  EntryPoint.hpp  Enum.hpp  FileSystem.cpp  FileSystem.hpp  Handle.hpp  Input.cpp  Input.hpp  JobManager.cpp  Keycodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Option.hpp  Project.cpp  Project.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp  System.hpp  SystemManager.hpp  Types.hpp  UUID.cpp  UUID.hpp  VFS.cpp  VFS.hpp
Oxylus/src/Memory/: Hasher.hpp  SlotMap.hpp  Stack.cpp  Stack.hpp
Oxylus/src/Modules/: Linker.hpp  ModuleInterface.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  ModuleUtil.cpp  ModuleUtil.hpp
Oxylus/src/OS/: Linux.cpp  OS.hpp  Win32.cpp
Oxylus/src/Physics/: Physics.cpp  Physics.hpp  PhysicsInterfaces.cpp  PhysicsInterfaces.hpp  PhysicsMaterial.hpp  RayCast.hpp
Oxylus/src/Render/: BoundingVolume.cpp  BoundingVolume.hpp  Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  DefaultRenderPipeline.cpp  DefaultRenderPipeline.h  DefaultRenderPipeline.hpp  EasyRenderPipeline.cpp  EasyRenderPipeline.hpp  Frustum.cpp  Frustum.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  MeshVertex.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderPipeline.cpp  RenderPipeline.h  RenderPipeline.hpp  Renderer.cpp  Renderer.hpp  RendererCommon.cpp  RendererCommon.h  RendererCommon.hpp  RendererConfig.cpp  RendererConfig.h  RendererConfig.hpp  RendererInstance.cpp  SceneRendererEvents.hpp  SimpleRenderPipeline.cpp  SimpleRenderPipeline.hpp  Window.cpp  Window.hpp
Oxylus/src/Scene/: ComponentWrapper.hpp  Components.hpp  Entity.cpp  Entity.hpp  EntitySerializer.cpp  EntitySerializer.hpp  Scene.cpp  Scene.hpp  SceneEvents.hpp  SceneGPU.hpp  SceneRenderer.cpp  SceneRenderer.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Oxylus/src/Scripting/: LuaApplicationBindings.cpp  LuaApplicationBindings.hpp  LuaAssetManagerBindings.cpp  LuaAssetManagerBindings.hpp  LuaAudioBindings.cpp  LuaAudioBindings.hpp  LuaComponentBindings.cpp  LuaComponentBindings.hpp  LuaDebugBindings.cpp  LuaDebugBindings.hpp  LuaFlecsBindings.cpp  LuaHelpers.hpp  LuaImGuiBindings.hpp  LuaInputBindings.cpp  LuaInputBindings.hpp  LuaManager.cpp  LuaManager.hpp  LuaMathBindings.cpp  LuaMathBindings.hpp  LuaPhysicsBindings.cpp  LuaPhysicsBindings.hpp  LuaRendererBindings.cpp  LuaRendererBindings.hpp  LuaSceneBindings.cpp  LuaSceneBindings.hpp  LuaSystem.cpp  LuaSystem.hpp  LuaUIBindings.cpp  LuaUIBindings.hpp  LuaVFSBindings.cpp
Oxylus/src/Thread/: TaskScheduler.cpp  TaskScheduler.hpp  Thread.cpp  Thread.hpp  ThreadManager.cpp  ThreadManager.hpp
Oxylus/src/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp  OxUI.cpp  OxUI.hpp  RuntimeConsole.cpp  RuntimeConsole.hpp  SceneHierarchyViewer.cpp
Oxylus/src/Utils/: Archive.cpp  Archive.hpp  CVars.cpp  CVars.hpp  ColorUtils.hpp  FileDialogs.cpp  FileWatch.hpp  ImGuiScoped.hpp  JsonHelpers.hpp  Log.cpp  Log.hpp  OxMath.cpp  OxMath.hpp  Profiler.cpp  Profiler.hpp  Random.cpp  Random.hpp  StringUtils.hpp  Timer.cpp  Timer.hpp  Timestep.cpp  Timestep.hpp  Toml.cpp  Toml.hpp
Oxylus/tests/: OxHelpers.hpp  xmake.lua
Oxylus/tests/Core/: TestJobManager.cpp
Oxylus/tests/Scene/: TestSceneBindings.cpp
Oxylus/tests/Scripting/: TestFlecsBindings.cpp
(+174 files in other folders)
